--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,17 @@ version = "1.4.0"
 description = "Fast, lightweight and schema-less search backend."
 readme = "README.md"
 license = "MPL-2.0"
-edition = "2018"
+edition = "2021"
 homepage = "https://github.com/valeriansaliou/sonic"
 repository = "https://github.com/valeriansaliou/sonic.git"
 keywords = ["search", "query", "server", "index"]
 categories = ["database-implementations", "web-programming"]
 authors = ["Valerian Saliou <valerian@valeriansaliou.name>", "Baptiste Jamin <baptistejamin@gmail.com>"]
 
-[[bin]]
-name = "sonic"
-path = "src/main.rs"
-doc = false
+# [[bin]]
+# name = "sonic"
+# path = "src/main.rs"
+# doc = false
 
 [dependencies]
 log = "0.4"
@@ -39,16 +39,17 @@ linked_hash_set = "0.1"
 whatlang = "0.16"
 regex = "1.6"
 
-[target.'cfg(unix)'.dependencies]
-nix = "0.18"
-tikv-jemallocator = { version = "0.4", optional = true }
+# [target.'cfg(unix)'.dependencies]
+# nix = "0.18"
+# tikv-jemallocator = { version = "0.4", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["minwindef", "consoleapi"] }
 
 [features]
-default = ["allocator-jemalloc", "tokenizer-chinese"]
-allocator-jemalloc = ["tikv-jemallocator"]
+# default = ["allocator-jemalloc", "tokenizer-chinese"]
+default = ["tokenizer-chinese"]
+# allocator-jemalloc = ["tikv-jemallocator"]
 tokenizer-chinese = ["jieba-rs"]
 benchmark = []
 
